# cookiecutter-pypackage

./: .editorconfig  README.rst  cookiecutter.json
docs/: prompts.rst  tutorial.rst
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .editorconfig  .flake8  .gitignore  .pre-commit-config.yml  .travis.yml  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.py  sonar-project.properties
{{cookiecutter.project_slug}}/docs/: installation.rst
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/vscode/: settings.json
